# xrayscatteringtools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xrayscatteringtools/: __init__.py  azimuthal.py  io.py  plotting.py  utils.py
src/xrayscatteringtools/calib/: __init__.py  geometry_calibration.py  masking.py  scattering_corrections.py  timetool_calibration.py
src/xrayscatteringtools/calib/data/: Zn_attenuation_length.h5  attenuation_lengths.h5
src/xrayscatteringtools/data/: Jungfrau.h5  Jungfrau4M.h5
src/xrayscatteringtools/theory/: __init__.py  geometries.py  geometries.pyi  iam.py  patterns.py  patterns.pyi
src/xrayscatteringtools/theory/data/: SF6_CCSD_aug_cc_pVDZ.h5  SF6_MP2_aug_cc_pVDZ.h5  sf6.h5
src/xrayscatteringtools/theory/data/geometries/: SF6__CCSD_T_DHK__aug_cc_pV5Z_DK.h5  make_geometry_h5.py
src/xrayscatteringtools/theory/data/patterns/: SF6__HF__aug_cc_pVDZ.h5  convert_ab_initio_to_h5.py
tests/: DMP_ground.xyz  azav_test.ipynb  azav_test.py  calib_test.ipynb  calib_test.py  convert_ab_initio_to_h5.py  geometries_test.py  iam_oriented_test.ipynb  iam_oriented_test.py  iam_pattern_test.ipynb  iam_pattern_test.py  patterns_test.ipynb  patterns_test.py  sf6_test.xyz  test_azimuthal.py  test_geometries.py  test_geometry_calibration.py  test_iam.py  test_io.py  test_masking.py  test_patterns.py  test_plotting.py  test_scattering_corrections.py  test_timetool_calibration.py  test_utils.py
tests/old/: geometries_test.ipynb  iam_oriented_test.ipynb  iam_pattern_test.ipynb  patterns_test.ipynb
