[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "xrayscatteringtools"
version = "1.0.0"
description = "A library for gas phase analysis at the CXI endstation"
authors = [
    { name = "David Romano", email = "david_j_romano@brown.edu" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy>=1.11",
    "IPython",
    "matplotlib",
    "tqdm",
    "h5py",
    "requests",
    "xraylib",
    "pyyaml",
    "ruamel.yaml",
    "pyFAI"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "mypy>=1.9",
    "ruff>=0.3"
]

[project.urls]
Homepage = "https://github.com/Weber-Group/xrayscatteringtools"
Issues = "https://github.com/Weber-Group/xrayscatteringtools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::RuntimeWarning:xrayscatteringtools.calib.scattering_corrections",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
